--- a/styles2.css
+++ b/styles2.css
@@ -2,6 +2,7 @@ header div a {
     background-color: #00085e;
     border-radius: 50%;
 }
+
 header div a ion-icon {
     color: #fff;
     display: initial;
@@ -15,47 +16,56 @@ header div a ion-icon {
     margin: 20px 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 .swiper-wrapper {
     position: relative;
     max-width: 390px;
     max-height: 250px;
     background-color: #fff;
 }
+
 .swiper-slide {
     display: grid;
     place-items: center;
-    background-image: linear-gradient(to top,#00053a, #37409c);
+    background-image: linear-gradient(to top, #00053a, #37409c);
     border-radius: 10px;
     padding: 15px 30px;
 }
+
 .swiper-slide p {
     font-size: .7em;
     color: #dee0ff;
     letter-spacing: 1.4px;
     font-weight: 500;
 }
+
 .swiper-slide h1 {
     font-size: 1.9em;
     font-style: normal;
     color: #fff;
 }
+
 .swiper-slide h2 {
     font-size: 1.6em;
     color: #fff;
     font-weight: 400;
 }
+
 .swiper-slide h3 {
     font-size: 1em;
     color: #fff;
     font-weight: 400;
     margin-top: 5px;
 }
+
 .swiper-slide span {
     margin: 6px 0;
 }
+
 .swiper-slide span:nth-child(3) {
     display: flex;
 }
+
 .swiper-slide span div {
     margin-right: 14px;
 }
@@ -71,8 +81,9 @@ header div a ion-icon {
 .nav-btn::after,
 .nav-btn::before {
     color: #fff;
- 
+
 }
+
 .swiper-pagination {
     display: none;
 }
@@ -83,48 +94,58 @@ header div a ion-icon {
 .desktopview {
     display: none;
 }
+
 .viewtoggle {
     display: flex;
     justify-content: center;
 }
+
 .desktop {
     margin: 20px;
-    background-image: linear-gradient(to top,#00085e, #37409c);
+    background-image: linear-gradient(to top, #00085e, #37409c);
     border-radius: 10px;
     padding: 15px 30px;
     width: 390px;
 }
+
 .desktop span:nth-child(3) {
     display: flex;
 }
+
 .desktop p {
     font-size: .7em;
     color: #dee0ff;
     letter-spacing: 1.4px;
     font-weight: 500;
 }
+
 .desktop h1 {
     font-size: 1.9em;
     font-style: normal;
     color: #fff;
 }
+
 .desktop h2 {
     font-size: 1.6em;
     color: #fff;
     font-weight: 400;
 }
+
 .desktop h3 {
     font-size: 1em;
     color: #fff;
     font-weight: 400;
     margin-top: 5px;
 }
+
 .desktop span {
     margin: 6px 0;
 }
+
 .desktop span:nth-child(3) {
     display: flex;
 }
+
 .desktop span div {
     margin-right: 5px;
 }
@@ -140,6 +161,7 @@ header div a ion-icon {
     border-top: #1b1b1b 1px solid;
     padding: 15px 0;
 }
+
 .transfer .row a {
     margin: 10px 15px;
     text-decoration: none;
@@ -147,6 +169,7 @@ header div a ion-icon {
     text-align: center;
     color: #1b1b1b;
 }
+
 .transfer .row a h3 {
     margin-top: 10px;
     font-size: .8em;
@@ -156,9 +179,9 @@ header div a ion-icon {
 
 #icon {
     width: 40px;
-    background-color:#00053a; 
-    color: #fff; 
-    padding: 12px; 
+    background-color: #00053a;
+    color: #fff;
+    padding: 12px;
     border-radius: 7px;
 }
 
@@ -166,16 +189,84 @@ header div a ion-icon {
 
 
 
+.rabocard {
+    background-image: linear-gradient(to right, #000000, #111435, #000000);
+    border-radius: 15px;
+    padding: 25px;
+    max-width: 400px;
+    height: 200px;
+}
+
+.rabocard div {
+    display: flex;
+    align-items: center;
+}
+
+.rabocard div:nth-child(1) {
+    justify-content: space-between;
+}
+
+.rabocard div span:nth-child(1) {
+    background-color: rgb(218, 185, 0);
+    color: rgb(218, 185, 0);
+    width: 30px;
+    height: 25px;
+    border-radius: 5px;
+}
+
+.rabocard div span img {
+    width: 50px;
+}
+
+.rabocard h3 {
+    color: #fff;
+    font-weight: 300;
+    font-size: 1.1em;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode',
+        'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    letter-spacing: .3em;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.rabocard .date {
+    align-items: center;
+    margin-left: 20px;
+}
+
+.rabocard p {
+    color: #fff;
+    font-size: .7em;
+    text-align: center;
+    line-height: 1;
+    padding: 10px;
+    font-weight: 100;
+}
 
 
 
 
 
 
-
-
-
-
+.rabotips div {
+    max-width: 400px;
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    border-top: #747474 solid 1px;
+}
+.rabotips div span {
+    margin: 7px;
+}
+.rabotips div span h4 {
+    font-size: 1em;
+}
+.rabotips div span p {
+    font-size: .8em;
+}
+.rabotips div span #iconss {
+    font-size: 2em;
+}
 
 
 
@@ -183,11 +274,13 @@ header div a ion-icon {
     .container {
         display: none;
     }
+
     .desktopview {
         display: initial;
     }
-    
+
 }
+
 @media only screen and (min-width:600px) {
     .transfer .row {
         border-top: none;
@@ -199,6 +292,7 @@ header div a ion-icon {
     bottom: 60px;
     right: 10px;
 }
+
 .customersupport #ikon {
     color: #fff;
     font-size: 30px;
@@ -206,10 +300,3 @@ header div a ion-icon {
     border-radius: 50%;
     background-color: #00053a;
 }
-
-
-
-
-
-
-
