--- a/styles2.css
+++ b/styles2.css
@@ -194,7 +194,7 @@ header div a ion-icon {
     border-radius: 15px;
     padding: 25px;
     max-width: 400px;
-    height: 200px;
+    min-height: 220px;
 }
 
 .rabocard div {
@@ -270,6 +270,152 @@ header div a ion-icon {
 
 
 
+.customersupport {
+    position: fixed;
+    bottom: 60px;
+    right: 10px;
+}
+
+.customersupport #ikon {
+    color: #fff;
+    font-size: 30px;
+    padding: 18px;
+    border-radius: 50%;
+    background-color: #00053a;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.transfers {
+    margin: 0;
+}
+.transfers h1 {
+    font-style: normal;
+    color: #fff;
+    padding: 10px;
+    background-color: #00085e;
+}
+.transfers .maindivs {
+    border-top: #1b1b1b solid 1px;
+    padding: 15px 0;
+    margin: 10px 0;
+    width: 100%;
+}
+.transfers div h3 {
+    margin: 0;
+    font-size: 1em;
+}
+.transfers div p {
+    margin: 0;
+    font-size: .9em;
+}
+
+
+
+
+.transfers form div h4 {
+    font-size: .7em;
+    margin-bottom: 10px;
+}
+.transfers form div {
+    margin: 25px 0;
+}
+.transfers form div span {
+    border-bottom: #1b1b1b 1px solid;
+    width: 100%;
+    display: flex;
+}
+
+.transfers form div span input {
+    border: none;
+    outline: none;
+    width: 500px;
+    padding: 4px;
+    font-size: 1em;
+}
+.transfers form div span #transfericons {
+    font-size: .8em;
+    margin-top: 8px;
+}
+.transfers button {
+    background-color: #00085e;
+    display: block;
+    margin: auto;
+    border: none;
+    color: #fff;
+    font-size: 1em;
+    cursor: pointer;
+    padding: 15px 20%;
+    border-radius: 7px;
+    transition: .3s;
+}
+.transfers button:hover {
+    background-color: #00021a;
+}
+
+
+
+
+
+
+
+
+
+.success {
+    position: fixed;
+    background-color: #00b40f;
+    left: 1vw;
+    top: 40%;
+    z-index: 1;
+    padding: 3em;
+    border-radius: 10px;
+    align-items: center;
+    display: none;
+    box-shadow: black 2px 2px 20px;
+}
+.success div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.success p {
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+}
+.success a {
+    font-size: 40px;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 8px;
+    cursor: pointer;
+    text-decoration: none;
+}
+#successicon {
+    color: #fff;
+    padding: 20px;
+    font-size: 2em;
+}
+.success h2 {
+    color: #fff;
+    font-size: 2em;
+    line-height: 1.2;
+}
+
+
+
+
+
 @media only screen and (min-width:800px) {
     .container {
         display: none;
@@ -285,18 +431,28 @@ header div a ion-icon {
     .transfer .row {
         border-top: none;
     }
+    main {
+        margin: 0 20%;
+    }
+    .success {
+        left: 15vw;
+    }
 }
-
-.customersupport {
-    position: fixed;
-    bottom: 60px;
-    right: 10px;
+@media only screen and (min-width:850px) {
+    .success {
+        left: 20vw;
+        top: 40%;
+    }
 }
-
-.customersupport #ikon {
-    color: #fff;
-    font-size: 30px;
-    padding: 18px;
-    border-radius: 50%;
-    background-color: #00053a;
+@media only screen and (min-width:1150px) {
+    .success {
+        left: 30vw;
+        top: 40%;
+    }
+}
+@media only screen and (max-width:370px) {
+    .success {
+        left: 1vw;
+        top: 40%;
+    }
 }
